--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,7 @@
+<html>
+  <body>
 <my-app>loading</my-app>
+<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script src="./jquery.connections.js"></script>
+  </body>
+</html>
