--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
   <body>
 <my-app>loading</my-app>
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-<script src="./jquery.connections.js"></script>
+<script src="https://musclesoft.github.io/jquery-connections/jquery.connections.js"></script>
+
   </body>
 </html>
